--- a/.github/workflows/bloggy_actions.yml
+++ b/.github/workflows/bloggy_actions.yml
@@ -1,10 +1,10 @@
-name: Test Bloggy
-on:
-  push:
-jobs:
-  environnement:
-    runs-on: ubuntu-latest
-    steps:
-    - name: installation_dependance
-      run: npm install
+#name: Test Bloggy
+#on:
+#  push:
+#jobs:
+#  environnement:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - name: installation_dependance
+#      run: npm install
 
